--- a/测试.html
+++ b/测试.html
@@ -18,7 +18,7 @@
         aliUrl: "HTTPS://QR.ALIPAY.COM/FKX07060GEKXRHPJAWWU3B",
         
         // 用于动态生成二维码的API，不需要修改。
-        qrcodeApi: "http://code.ciaoca.com/javascript/qrcode/demo/api"    
+        qrcodeApi: "https://cli.im/api/qrcode/code?text="    
         /*
         备用二维码api：
         http://s.jiathis.com/qrcode.php?url=
