--- a/测试.html
+++ b/测试.html
@@ -18,14 +18,14 @@
         aliUrl: "HTTPS://QR.ALIPAY.COM/FKX07060GEKXRHPJAWWU3B",
         
         // 用于动态生成二维码的API，不需要修改。
-        qrcodeApi: "https://cli.im/api/qrcode/code?text="    
+        qrcodeApi: "http://qr.liantu.com/api.php?text="    
         /*
         备用二维码api：
         http://s.jiathis.com/qrcode.php?url=
         http://www.kuaizhan.com/common/encode-png?large=true&data=
         http://b.bshare.cn/barCode?site=weixin&url=
         http://pan.baidu.com/share/qrcode?w=150&h=150&url=
-		http://qr.liantu.com/api.php?text=
+		https://cli.im/api/qrcode/code?text=
         */
     }
     </script>
