--- a/测试.html
+++ b/测试.html
@@ -18,7 +18,7 @@
         aliUrl: "HTTPS://QR.ALIPAY.COM/FKX07060GEKXRHPJAWWU3B",
         
         // 用于动态生成二维码的API，不需要修改。
-        qrcodeApi: "http://qr.liantu.com/api.php?text="    
+        qrcodeApi: "http://pan.baidu.com/share/qrcode?w=233&h=233&url="    
         /*
         备用二维码api：
         http://s.jiathis.com/qrcode.php?url=
@@ -26,6 +26,7 @@
         http://b.bshare.cn/barCode?site=weixin&url=
         http://pan.baidu.com/share/qrcode?w=150&h=150&url=
 		https://cli.im/api/qrcode/code?text=
+		http://qr.liantu.com/api.php?text=
         */
     }
     </script>
