--- a/测试.html
+++ b/测试.html
@@ -11,8 +11,8 @@
         // 在以下双引号中粘贴QQ钱包收款链接
         qqUrl: "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&a=1&u=1109228662&ac=A7F8A667DE01DE1772A4044FF4982D73C6380EE2C8E05E005D1C06F92A6BC5AC&n=0&f=wallet",		
         
-        // 在以下双引号中粘贴微信收款链接
-        wechatUrl: "wxp://f2f0U20qzcXASPtuX3qIqGA_wJA1IR7v098e",
+        // 在以下双引号中粘贴微信收款链接wxp://f2f0U20qzcXASPtuX3qIqGA_wJA1IR7v098e
+        wechatUrl: "https://u.wechat.com/MFoSF6xONZT6ndvJ05Pl6CE",
         
         // 在以下双引号中粘贴支付宝收款链接
         aliUrl: "HTTPS://QR.ALIPAY.COM/FKX07060GEKXRHPJAWWU3B",
