--- a/测试.html
+++ b/测试.html
@@ -100,7 +100,7 @@
         <div class="code-area">
             <img id="page-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">扫描以上二维码向我付款</div>
+        <div class="code-footer">扫描以上二维码向熊刚付款</div>
     </div>
     
     <!-- QQ钱包二维码展示区域 -->
