--- a/测试.html
+++ b/测试.html
@@ -109,7 +109,7 @@
         <div class="code-area">
             <img id="qq-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按以上二维码向我付款</div>
+        <div class="code-footer">长按以上二维码熊刚付款</div>
     </div>
     
     <!-- 微信二维码展示区域 -->
@@ -118,7 +118,7 @@
         <div class="code-area">
             <img id="wechat-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按以上二维码向我付款</div>
+        <div class="code-footer">长按以上二维码熊刚付款</div>
     </div>
     
     <script>
